--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
-
-        <!--교육공간-->
+        <!-- 교육공간 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultAppActivity"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,14 +27,14 @@
         <activity
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" /> <!-- 디지털 나이 검사 -->
-        <activity android:name=".MainActivity"
-            android:exported="false"> <!--메인화면-->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"> <!-- 메인화면 -->
 
         </activity>
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" /> <!-- 디지털 나이 검사 -->
@@ -89,18 +88,17 @@
             android:exported="false" /> <!-- 카메라 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="false" /> <!--전화-->
-
+            android:exported="false" /> <!-- 전화 -->
         <!-- 환경설정 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingEduActivity"
             android:exported="false" /> <!-- 환경설정 시작 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingDetailActivity"
-            android:exported="false" /><!--화면 밝기-->
+            android:exported="false" /> <!-- 화면 밝기 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
-            android:exported="false" /><!--글씨 크기-->
+            android:exported="false" /> <!-- 글씨 크기 -->
         <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
@@ -121,8 +119,9 @@
             android:exported="false" /> <!-- 코레일 -->
         <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오 택시 -->
-        <activity android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="true">
+        <activity
+            android:name=".edu_space.kakaotaxi.TaxiMainActivity"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -131,15 +130,23 @@
         </activity>
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".edu_space.kakaotaxi.payMActivity"
-
             android:exported="false" />
-
         <activity
             android:name=".edu_space.kakaotaxi.payActivity"
             android:exported="true" />
+        <!--배달의 민족-->
+        <activity
+            android:name=".edu_space.delivery.DlvMainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
