--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
-        <!-- 메인화면 -->
+        <activity
+            android:name=".learning_space.icon.LearningIconTest"
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity
+            android:name=".learning_space.icon.LearningIconActivity"
+            android:exported="false" /> <!-- 메인화면 -->
         <activity
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
             android:exported="false" /> <!-- 첫 화면 -->
-
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!-- 삭제할거 -->
@@ -83,8 +93,8 @@
         <!-- 계정생성 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
-            android:exported="false" />
-        <!-- 앱 설치 --> <!-- 이 부분 아래에 넣어주세요 -->
+            android:exported="false" /> <!-- 앱 설치 -->
+        <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오톡 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
@@ -97,17 +107,12 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="false" />
-        <!-- 코레일 --> <!-- 이 부분 아래에 넣어주세요 -->
+            android:exported="false" /> <!-- 코레일 -->
+        <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오 택시 -->
         <activity
             android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
@@ -117,7 +122,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotaxi.payActivity"
-            android:exported="false" /> 
+            android:exported="false" />
     </application>
 
 </manifest>
