--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,8 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="true"> <!--메인화면-->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/> <!--메인화면-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
             android:exported="false">
@@ -99,7 +94,23 @@
         <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
-            android:exported="false" /> <!-- 앱 설치 -->
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+        <activity
+            android:name=".edu_space.accountedu.GoogleLoginActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".edu_space.accountedu.GoogleMakeActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".edu_space.accountedu.GoogleDefaultInfoActivity"
+            android:exported="false"/>
+        <!-- 앱 설치 -->
         <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오톡 -->
         <activity
@@ -117,13 +128,8 @@
         <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오 택시 -->
         <activity android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
             android:exported="false"/>
