--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
-        <activity
-            android:name=".edu_space.delivery.shopActivity"
-            android:exported="false" />
+
         <!-- 교육공간 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultAppActivity"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,20 +30,16 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="false"/> <!--메인화면-->
+            android:exported="false"/><!--메인화면-->
 
 
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
             android:exported="false" />
-        <activity
-            android:name=".main.activity.DigitalStartActivity"
-            android:exported="false" /> <!-- 디지털 나이 검사 -->
+
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!-- 삭제할거 -->
-            android:exported="false">
-        </activity>
         <!-- 아이콘 교육 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
@@ -81,6 +75,7 @@
         <activity
             android:name=".edu_space.screenEdu.activity.ScreenEduRightBottomActivity"
             android:exported="false" /> <!-- 하단바 오른쪽 -->
+
         <!-- 기본앱 활용 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
@@ -91,11 +86,6 @@
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 -->
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="false" /> <!-- 전화 -->
-            android:exported="false"
-            tools:ignore="DuplicateActivity" /> <!--전화-->
 
         <!-- 환경설정 -->
         <activity
@@ -107,16 +97,11 @@
         <activity
             android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
             android:exported="false" /> <!-- 글씨 크기 -->
+
         <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
-            android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleLoginActivity"
             android:exported="false"/>
@@ -126,8 +111,9 @@
         <activity
             android:name=".edu_space.accountedu.GoogleDefaultInfoActivity"
             android:exported="false"/>
-        <!-- 앱 설치 -->
-        <!-- 이 부분 아래에 넣어주세요 -->
+
+        <!-- 앱 설치 --> <!-- 이 부분 아래에 넣어주세요 -->
+
         <!-- 카카오톡 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
@@ -140,17 +126,12 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="false" /> <!-- 코레일 -->
-        <!-- 이 부분 아래에 넣어주세요 -->
-        <!-- 카카오 택시 -->
+            android:exported="false" />
+        <!-- 코레일 --> <!-- 이 부분 아래에 넣어주세요 -->
 
+        <!-- 카카오 택시 -->
         <activity android:name=".edu_space.kakaotaxi.TaxiMainActivity"
             android:exported="false"/>
-  
-        <activity
-            android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="false" />
-            
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
             android:exported="false" />
@@ -159,16 +140,14 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotaxi.payActivity"
-            android:exported="true" /> <!-- 배달의 민족 -->
+            android:exported="true" />
+        <!-- 배달의 민족 -->
         <activity
             android:name=".edu_space.delivery.DlvMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.delivery.shopActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
