--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,28 +14,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
         tools:targetApi="31">
-
-        <!--교육공간-->
         <activity
-            android:name=".edu_space.default_app.activity.DefaultAppActivity"
+            android:name=".MainActivity2"
             android:exported="false">
         </activity>
+        <!-- <activity -->
+        <!-- android:name=".edu_space.delivery.shopActivity" -->
+        <!-- android:exported="false" /> -->
+        <!-- 교육공간 -->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultAppActivity"
+            android:exported="false" />
         <activity
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="true"> <!--메인화면-->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false"> <!-- 메인화면 -->
         </activity>
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
+        <activity
+            android:name=".EduSpaceActivity"
+            android:exported="false" /> <!-- 삭제할거 -->
         <!-- 아이콘 교육 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
@@ -81,25 +83,29 @@
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 -->
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="false"
-            tools:ignore="DuplicateActivity" /> <!--전화-->
-
         <!-- 환경설정 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingEduActivity"
             android:exported="false" /> <!-- 환경설정 시작 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingDetailActivity"
-            android:exported="false" /><!--화면 밝기-->
+            android:exported="false" /> <!-- 화면 밝기 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
-            android:exported="false" /><!--글씨 크기-->
+            android:exported="false" /> <!-- 글씨 크기 -->
         <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
-            android:exported="false" /> <!-- 앱 설치 -->
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.accountedu.GoogleLoginActivity"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".edu_space.accountedu.GoogleMakeActivity" -->
+        <!-- android:exported="false"/> -->
+        <!-- <activity -->
+        <!-- android:name=".edu_space.accountedu.GoogleDefaultInfoActivity" -->
+        <!-- android:exported="false"/> -->
+        <!-- 앱 설치 -->
         <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오톡 -->
         <activity
@@ -116,7 +122,28 @@
             android:exported="false" /> <!-- 코레일 -->
         <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오 택시 -->
-        <activity android:name=".edu_space.kakaotaxi.TaxiMainActivity"
+        <activity
+            android:name=".edu_space.kakaotaxi.TaxiMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.kakaotaxi.mapActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.kakaotaxi.payMActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.kakaotaxi.payActivity"
+            android:exported="false" /> <!-- 배달의 민족 -->
+        <!-- <activity -->
+        <!-- android:name=".edu_space.delivery.DlvMainActivity" -->
+        <!-- android:exported="true"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
+        <activity
+            android:name=".learning_space.icon.LearningIconTest"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -124,16 +151,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".edu_space.kakaotaxi.mapActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".edu_space.kakaotaxi.payMActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".edu_space.kakaotaxi.payActivity"
-            android:exported="true" />
     </application>
 
 </manifest>
