[feat][style] Kakao 교육 추가, EduScreen 주석 추가 및 기능 추가/수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,8 +122,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".edu_space.kakaotalk.activity.ProfileDetailActivity"
-            android:exported="false" /> <!-- 네이버 -->
+            android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.kakaotalk.activity.KakaoChattingActivity"
+            android:exported="false"/>
+        <!-- 네이버 -->
         <activity
             android:name=".edu_space.naver.activity.NaverSearchActivity"
             android:exported="false" />
