--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,8 @@
         <!-- 교육공간 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultAppActivity"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" /> <!-- 디지털 나이 검사 -->
@@ -38,14 +33,10 @@
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
             android:exported="false" />
-        <activity
-            android:name=".main.activity.DigitalStartActivity"
-            android:exported="false" /> <!-- 디지털 나이 검사 -->
+
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!-- 삭제할거 -->
-            android:exported="false">
-        </activity>
         <!-- 아이콘 교육 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
@@ -91,11 +82,6 @@
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 -->
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="false" /> <!-- 전화 -->
-            android:exported="false"
-            tools:ignore="DuplicateActivity" /> <!--전화-->
 
         <!-- 환경설정 -->
         <activity
@@ -111,12 +97,12 @@
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".edu_space.accountedu.GoogleLoginActivity"
             android:exported="false"/>
@@ -125,6 +111,21 @@
             android:exported="false"/>
         <activity
             android:name=".edu_space.accountedu.GoogleDefaultInfoActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".edu_space.accountedu.GoogleMailActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".edu_space.accountedu.GooglePasswordActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".edu_space.accountedu.GoogleGetCodeActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".edu_space.accountedu.GooglePutCodeActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".edu_space.accountedu.GoogleMailAddActivity"
             android:exported="false"/>
         <!-- 앱 설치 -->
         <!-- 이 부분 아래에 넣어주세요 -->
@@ -146,11 +147,7 @@
 
         <activity android:name=".edu_space.kakaotaxi.TaxiMainActivity"
             android:exported="false"/>
-  
-        <activity
-            android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="false" />
-            
+
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
             android:exported="false" />
@@ -159,16 +156,11 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotaxi.payActivity"
-            android:exported="true" /> <!-- 배달의 민족 -->
+            android:exported="false" /> <!-- 배달의 민족 -->
         <activity
             android:name=".edu_space.delivery.DlvMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
