--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,10 @@
         tools:targetApi="31">
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
-            android:exported="false" />
-        <!-- 교육공간 -->
+            android:exported="false" /> <!-- 교육공간 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultAppActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" /> <!-- 디지털 나이 검사 -->
@@ -72,7 +71,7 @@
         <!-- 기본앱 활용 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
             android:exported="false"> <!-- 전화 -->
@@ -83,7 +82,7 @@
         <!-- 환경설정 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingEduActivity"
-            android:exported="true"></activity> <!-- 환경설정 시작 -->
+            android:exported="true" /> <!-- 환경설정 시작 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingDetailActivity"
             android:exported="false" /> <!-- 화면 밝기 -->
@@ -99,34 +98,33 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleLoginActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleMakeActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleDefaultInfoActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleMailActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GooglePasswordActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleGetCodeActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GooglePutCodeActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleMailAddActivity"
-            android:exported="false"/>
-        <!-- 앱 설치 -->
+            android:exported="false" /> <!-- 앱 설치 -->
         <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오톡 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
             android:exported="false" />
@@ -135,7 +133,7 @@
             android:exported="false" /> <!-- 네이버 -->
         <activity
             android:name=".edu_space.naver.activity.NaverSearchActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
             android:exported="true">
@@ -146,10 +144,28 @@
             </intent-filter>
         </activity> <!-- 코레일 -->
         <!-- 이 부분 아래에 넣어주세요 -->
+        <activity
+            android:name=".edu_space.ticket.TicketMainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".edu_space.ticket.resActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.ticket.Ticket2MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.ticket.TpayActivity"
+            android:exported="false" />
         <!-- 카카오 택시 -->
         <activity
             android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
             android:exported="false" />
