--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="false"> <!-- 메인화면 -->
-        </activity>
+            android:exported="false"/> <!-- 메인화면 -->
+
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
             android:exported="false" />
@@ -83,7 +83,13 @@
         <!-- 환경설정 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingEduActivity"
-            android:exported="true"></activity> <!-- 환경설정 시작 -->
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- 환경설정 시작 -->
         <activity
             android:name=".edu_space.settingedu.activity.SettingDetailActivity"
             android:exported="false" /> <!-- 화면 밝기 -->
@@ -138,13 +144,8 @@
             android:exported="false"></activity>
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- 코레일 -->
+            android:exported="false"/>
+             <!-- 코레일 -->
         <!-- 이 부분 아래에 넣어주세요 -->
         <!-- 카카오 택시 -->
         <activity
