--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,8 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" /> <!-- 교육공간 -->
@@ -28,128 +27,111 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"> <!-- 메인화면 -->
-        <activity android:name=".MainActivity"
-            android:exported="false"> <!--메인화면-->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+            </activity>
+            <activity
+                android:name=".edu_space.default_app.activity.DefaultMessageActivity"
+                android:exported="false" />
+            <activity
+                android:name=".EduSpaceActivity"
+                android:exported="false" /> <!-- 삭제할거 -->
+            <!-- 아이콘 교육 -->
+            <activity
+                android:name=".edu_space.icon_edu.activity.IconEduActivity"
+                android:exported="false" /> <!-- 아이콘 첫화면 -->
+            <activity
+                android:name=".edu_space.icon_edu.activity.IconDetailActivity"
+                android:exported="false" /> <!-- 아이콘 설명 -->
+            <!-- 화면구성 -->
+            <activity
+                android:name=".edu_space.screenEdu.activity.ScreenEduMainActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.screenEdu.activity.ScreenEduActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.screenEdu.activity.ScreenEduToolActivity"
+                android:exported="false" /> <!-- 상단바 -->
+            <activity
+                android:name=".edu_space.screenEdu.activity.ScreenEduLeftToolActivity"
+                android:exported="false" /> <!-- 상단바 왼쪽 -->
+            <activity
+                android:name=".edu_space.screenEdu.activity.ScreenEduRightToolActivity"
+                android:exported="false" /> <!-- 상단바 오른쪽 -->
+            <activity
+                android:name=".edu_space.screenEdu.activity.ScreenEduBottomActivity"
+                android:exported="false" /> <!-- 하단바 -->
+            <activity
+                android:name=".edu_space.screenEdu.activity.ScreenEduLeftBottomActivity"
+                android:exported="false" /> <!-- 하단바 왼쪽 -->
+            <activity
+                android:name=".edu_space.screenEdu.activity.ScreenEduCenterBottomActivity"
+                android:exported="false" /> <!-- 하단바 가운데 -->
+            <activity
+                android:name=".edu_space.screenEdu.activity.ScreenEduRightBottomActivity"
+                android:exported="false" /> <!-- 하단바 오른쪽 -->
+            <!-- 기본앱 활용 -->
+            <activity
+                android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
+                android:exported="false"> <!-- 전화 -->
+            </activity>
+            <activity
+                android:name=".edu_space.default_app.activity.DefaultCameraActivity"
+                android:exported="false" /> <!-- 카메라 -->
+            <!-- 환경설정 -->
+            <activity
+                android:name=".edu_space.settingedu.activity.SettingEduActivity"
+                android:exported="true" /> <!-- 환경설정 시작 -->
+            <activity
+                android:name=".edu_space.settingedu.activity.SettingDetailActivity"
+                android:exported="false" /> <!-- 화면 밝기 -->
+            <activity
+                android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
+                android:exported="false" /> <!-- 글씨 크기 -->
+            <activity
+                android:name=".edu_space.settingedu.activity.SettingDisplayActivity"
+                android:exported="false" /> <!-- 화면 디스플레이 -->
+            <!-- 계정생성 교육 -->
+            <activity
+                android:name=".edu_space.accountedu.GoogleMainActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.accountedu.GoogleLoginActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.accountedu.GoogleMakeActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.accountedu.GoogleDefaultInfoActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.accountedu.GoogleMailActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.accountedu.GooglePasswordActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.accountedu.GoogleGetCodeActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.accountedu.GooglePutCodeActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.accountedu.GoogleMailAddActivity"
+                android:exported="false" /> <!-- 앱 설치 -->
+            <!-- 이 부분 아래에 넣어주세요 -->
         <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
+            android:name=".edu_space.appinstall.installActivity"
             android:exported="false" />
         <activity
-            android:name=".EduSpaceActivity"
-            android:exported="false" /> <!-- 삭제할거 -->
-        <!-- 아이콘 교육 -->
-        <activity
-            android:name=".edu_space.icon_edu.activity.IconEduActivity"
-            android:exported="false" /> <!-- 아이콘 첫화면 -->
-        <activity
-            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-            android:exported="false" /> <!-- 아이콘 설명 -->
-        <!-- 화면구성 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduMainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduToolActivity"
-            android:exported="false" /> <!-- 상단바 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduLeftToolActivity"
-            android:exported="false" /> <!-- 상단바 왼쪽 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduRightToolActivity"
-            android:exported="false" /> <!-- 상단바 오른쪽 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduBottomActivity"
-            android:exported="false" /> <!-- 하단바 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduLeftBottomActivity"
-            android:exported="false" /> <!-- 하단바 왼쪽 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduCenterBottomActivity"
-            android:exported="false" /> <!-- 하단바 가운데 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduRightBottomActivity"
-            android:exported="false" /> <!-- 하단바 오른쪽 -->
-        <!-- 기본앱 활용 -->
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
-            android:exported="false"> <!-- 전화 -->
-        </activity>
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultCameraActivity"
-            android:exported="false" /> <!-- 카메라 -->
-        <!-- 환경설정 -->
-        <activity
-            android:name=".edu_space.settingedu.activity.SettingEduActivity"
-            android:exported="true" /> <!-- 환경설정 시작 -->
-        <activity
-            android:name=".edu_space.settingedu.activity.SettingDetailActivity"
-            android:exported="false" /> <!-- 화면 밝기 -->
-        <activity
-            android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
-            android:exported="false" /> <!-- 글씨 크기 -->
-        <activity
-            android:name=".edu_space.settingedu.activity.SettingDisplayActivity"
-            android:exported="false" /> <!-- 화면 디스플레이 -->
-        <!-- 계정생성 교육 -->
-        <activity
-            android:name=".edu_space.accountedu.GoogleMainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.accountedu.GoogleLoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.accountedu.GoogleMakeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.accountedu.GoogleDefaultInfoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.accountedu.GoogleMailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.accountedu.GooglePasswordActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.accountedu.GoogleGetCodeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.accountedu.GooglePutCodeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.accountedu.GoogleMailAddActivity"
-            android:exported="false" /> <!-- 앱 설치 -->
-        <!-- 이 부분 아래에 넣어주세요 -->
-        <!-- 카카오톡 -->
-        <activity
-            android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.kakaotalk.activity.KakaoChattingActivity"
-            android:exported="false" /> <!-- 네이버 -->
-        <activity
-            android:name=".edu_space.naver.activity.NaverSearchActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="false">
-        </activity> <!-- 코레일 -->
-        <!-- 이 부분 아래에 넣어주세요 -->
-        <activity
-            android:name=".edu_space.ticket.TicketMainActivity"
+            android:name=".edu_space.appinstall.installMainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -157,25 +139,51 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".edu_space.ticket.resActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.ticket.Ticket2MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.ticket.TpayActivity"
-            android:exported="false" />
+            <!-- 카카오톡 -->
+            <activity
+                android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
+                android:exported="true" />
+            <activity
+                android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.kakaotalk.activity.KakaoChattingActivity"
+                android:exported="false" /> <!-- 네이버 -->
+            <activity
+                android:name=".edu_space.naver.activity.NaverSearchActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.naver.activity.NaverActivity"
+                android:exported="false" /> <!-- 코레일 -->
+            <!-- 이 부분 아래에 넣어주세요 -->
+            <activity
+                android:name=".edu_space.ticket.TicketMainActivity"
+                android:exported="true">
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+            </activity>
+            <activity
+                android:name=".edu_space.ticket.resActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.ticket.Ticket2MainActivity"
+                android:exported="false" />
+            <activity
+                android:name=".edu_space.ticket.TpayActivity"
+                android:exported="false" />
         <!-- 카카오 택시 -->
         <activity
             android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="false" />
-        </activity> <!-- 코레일 -->
-        <!-- 이 부분 아래에 넣어주세요 -->
-        <!-- 카카오 택시 -->
-        <activity
-            android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
             android:exported="false" />
@@ -187,23 +195,32 @@
             android:exported="false" /> <!-- 배달의 민족 -->
         <activity
             android:name=".edu_space.delivery.DlvMainActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".edu_space.delivery.shopActivity"
             android:exported="false" />
-
-
+        <activity
+            android:name=".edu_space.delivery.payDActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.delivery.foodmenuActivity"
+            android:exported="false" />
         <!-- TODO : 수진 - backend TEST -->
         <activity
             android:name=".backend.BackendTest"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
