--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="false"> <!-- 메인화면 -->
+            android:exported="true"> <!-- 메인화면 -->
                 <intent-filter>
                     <action android:name="android.intent.action.MAIN" />
 
@@ -80,8 +80,7 @@
                 android:exported="false" />
             <activity
                 android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
-                android:exported="false"> <!-- 전화 -->
-            </activity>
+                android:exported="false" /> <!-- 전화 -->
             <activity
                 android:name=".edu_space.default_app.activity.DefaultCameraActivity"
                 android:exported="false" /> <!-- 카메라 -->
@@ -132,13 +131,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.appinstall.installMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
             <!-- 카카오톡 -->
             <activity
                 android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
@@ -158,13 +151,7 @@
             <!-- 이 부분 아래에 넣어주세요 -->
             <activity
                 android:name=".edu_space.ticket.TicketMainActivity"
-                android:exported="true">
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
-
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
-            </activity>
+                android:exported="false" />
             <activity
                 android:name=".edu_space.ticket.resActivity"
                 android:exported="false" />
@@ -177,13 +164,7 @@
         <!-- 카카오 택시 -->
         <activity
             android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
             android:exported="false" />
@@ -195,12 +176,7 @@
             android:exported="false" /> <!-- 배달의 민족 -->
         <activity
             android:name=".edu_space.delivery.DlvMainActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
         <activity
             android:name=".edu_space.delivery.shopActivity"
@@ -214,13 +190,7 @@
         <!-- TODO : 수진 - backend TEST -->
         <activity
             android:name=".backend.BackendTest"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
